--- a/web-standard/package.json
+++ b/web-standard/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "prettier": "^2.0.5",
     "sass": "^1.26.10",
     "vue-router": "^3.3.4",
     "vuex": "^3.5.1"
